--- a/firmaEmail.html
+++ b/firmaEmail.html
@@ -86,7 +86,7 @@
     <input type="text" id="cognome">
   </p>
   <p>
-    <label for="tel">Telefono:</label>
+    <label for="tel">Telefono:*</label>
     <input type="text" id="tel">
   </p>
   <p>
@@ -101,6 +101,8 @@
     <a class="cancel" onclick="resetForm()">Annulla</a>
     <a onclick="compila()">Compila</a>
   </div>
+  <br>
+  <span style="font-size: smaller; font-weight: 100;">*telefono non obbligatorio</span>
 </form>
 
 <script>
@@ -111,7 +113,7 @@
     document.getElementById("ruolo").value = "";
     document.getElementById("email").value = "";
   }
-  
+
   function compila() {
     const nome = document.getElementById('nome');
     const cognome = document.getElementById('cognome');
