fix spazi tra icone e spostata sezione social vicino nome azienda

--- a/firmaEmail.html
+++ b/firmaEmail.html
@@ -74,9 +74,6 @@
     background-color: #e94644;
   }
 
-  #formCompilation span {
-    
-  }
 </style>
 
 <form id="formCompilation">
@@ -184,8 +181,22 @@
             <!-- JOB TYPE -->
             <p id="jobType" style="margin: 0 0 5px 0; font-size: 12px; color: #666666; display: flex; align-items: center;">Software Developer</p>
 
-            <!-- COMPANY NAME -->
-            <p style="margin: 0 0 5px 0;">Digiservice s.r.l.s.</p>
+            <!-- COMPANY NAME AND SOCIAL ICONS -->
+            <div style="display: flex; align-items: center; margin: 0 0 5px 0;">
+              <p style="margin: 0; vertical-align: middle; display: inline-block;">Digiservice s.r.l.s.</p>
+              <span style="margin: 0 10px; color: #666666; vertical-align: middle; display: inline-block;"> | </span>
+              <div style="display: inline-flex; align-items: center; vertical-align: middle;">
+                <a href="https://www.facebook.com/digiserviceitalia/about/" style="line-height: 0; display: inline-block; vertical-align: middle; margin-right: 8px;">
+                  <img src="https://www.digiservice-solutions.it/images/facebook-13.svg" alt="Facebook" style="width: 16px; height: 16px; display: block; vertical-align: middle;">
+                </a>
+                <a href="https://www.instagram.com/digiserviceitalia/" style="line-height: 0; display: inline-block; vertical-align: middle; margin-right: 8px;">
+                  <img src="https://www.digiservice-solutions.it/images/instagram-40.svg" alt="Instagram" style="width: 16px; height: 16px; display: block; vertical-align: middle;">
+                </a>
+                <a href="https://www.linkedin.com/company/digiserviceitalia/posts/?feedView=all" style="line-height: 0; display: inline-block; vertical-align: middle;">
+                  <img src="https://www.digiservice-solutions.it/images/linkedin-83.svg" alt="Linkedin" style="width: 16px; height: 16px; display: block; vertical-align: middle;">
+                </a>
+              </div>
+            </div>
             
             <!-- GENERAL INFO - START -->
             <div style="margin: 6px 0;">
@@ -205,26 +216,6 @@
                 <img src="https://www.digiservice-solutions.it/images/sito.svg" alt="Posizione:" style="width: 12px; height: 12px; margin-right: 5px;">
                 <a href="https://www.digiservice-solutions.it" style="display: inline-block; color: #0066cc; text-decoration: none;">www.digiservice-solutions.it</a>    
               </p>
-              <!-- SOCIAL SECTION - START -->
-              <div style="margin: 4px 0 0 0; display: flex; align-items: center;">
-                <span style="margin-right: 10px; display: flex;">Seguici su:</span>
-                <span style="margin: 4px 0; display: flex;">
-                  <a href="https://www.facebook.com/digiserviceitalia/about/">
-                    <img src="https://www.digiservice-solutions.it/images/facebook-13.svg" alt="Facebook" style="width: 22px; height: 22px; margin-right: 10px;">
-                  </a>
-                </span>
-                <span style="margin: 4px 0; display: flex;">
-                  <a href="https://www.instagram.com/digiserviceitalia/">
-                    <img src="https://www.digiservice-solutions.it/images/instagram-40.svg" alt="Instagram" style="width: 22px; height: 22px; margin-right: 10px;">
-                  </a>
-                </span>
-                <span style="margin: 4px 0; display: flex;">
-                  <a href="https://www.linkedin.com/company/digiserviceitalia/posts/?feedView=all">
-                    <img src="https://www.digiservice-solutions.it/images/linkedin-83.svg" alt="Linkedin" style="width: 22px; height: 22px; margin-right: 10px;">
-                  </a>
-                </span>
-              </div>
-              <!-- SOCIAL SECTION - END -->
             </div>
             <!-- GENERAL INFO - END -->
           </td>
